fixed blog post layout issue

--- a/src/web/src/css/components/blog.css
+++ b/src/web/src/css/components/blog.css
@@ -16,6 +16,11 @@
   }
 }
 
+
+.blog-post--container {
+  width: 100%;
+}
+
 .blog-post--header {
   margin-bottom: calc(var(--spacing-base) * 7);
 }
